feat: Initial deployment setup for AllerScan fullstack application
- Added Replit configuration files for backend deployment
- Created deployment guide in DEPLOYMENT.md
- Implemented main entry point for FastAPI in backend/main.py
- Configured Nix environment for Python dependencies in backend/replit.nix
- Updated deployment status documentation in docs/DEPLOYMENT_STATUS.md
- Added package.json for frontend with gh-pages dependency
- Created PowerShell and Bash scripts for frontend deployment to GitHub Pages

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,7 @@ DEBUG=true
 API_V1_PREFIX="/api/v1"
 
 # CORS Settings (add your frontend URLs)
-ALLOW_ORIGINS="http://localhost:3000,http://localhost:5173,https://yourdomain.vercel.app"
+ALLOW_ORIGINS="http://localhost:3000,http://localhost:5173,https://yourdomain.vercel.app,https://Rynrd113.github.io,https://rynrd113.github.io"
 
 # Prediction Settings
 CONFIDENCE_THRESHOLD=0.3
