--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
 # 🚀 AllerScan Environment Configuration
 
-# MySQL Database Configuration (XAMPP Default)
+# MySQL Database Configuration (Podman)
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=root
 MYSQL_DATABASE=allerscan_db
 
 # Logging
