--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,35 @@
-# 🚀 AllerScan Environment Configuration
+# 🔧 Environment Configuration for AllerScan API
+# Copy this file to .env and adjust values as needed
 
-# MySQL Database Configuration (Podman)
+# Application Settings
+APP_NAME="AllerScan API"
+APP_VERSION="1.0.0"
+ENVIRONMENT="development"
+DEBUG=true
+
+# API Configuration
+API_V1_PREFIX="/api/v1"
+
+# CORS Settings (add your frontend URLs)
+ALLOW_ORIGINS=["http://localhost:3000","http://localhost:5173","https://yourdomain.vercel.app","https://Rynrd113.github.io","https://rynrd113.github.io"]
+
+# Prediction Settings
+CONFIDENCE_THRESHOLD=0.3
+MAX_INPUT_LENGTH=1000
+
+# Logging
+LOG_LEVEL="INFO"
+LOG_FILE="logs/allergen_api.log"
+
+# Database Configuration untuk DBngin
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=root
+MYSQL_PASSWORD=
 MYSQL_DATABASE=allerscan_db
 
-# Logging
-LOG_LEVEL=INFO
-LOG_FILE=logs/allergen_api.log
+# Model Paths (usually don't need to change these)
+# MODEL_DIR="app/models/saved_models"
+# CLASSIFIER_MODEL_PATH="app/models/saved_models/alergen_classifier_model.pkl"
+# TFIDF_VECTORIZER_PATH="app/models/saved_models/tfidf_vectorizer.pkl"
+# LABEL_BINARIZER_PATH="app/models/saved_models/multilabel_binarizer.pkl"
